tests/NormalTests/paczka1/fuzzy1/99763143.err
Error in line 1: A795 S802 79,85
Error in line 2: A795 S802 298,9
Error in line 3: qopEcepUe S802 9,8
Error in line 7: A795 A795 33,2
Error in line 20: A795 S802 20,5
Error in line 28: YmhuH S719 85,7
